Bug 1422518 - Use LOAD_FLAGS_DISALLOW_INHERIT_PRINCIPAL for meta refresh r=bz MozReview-Commit-ID: H3hnO3NmHYA